--- a/main.ui
+++ b/main.ui
@@ -974,7 +974,7 @@ Button */
                    <enum>Qt::LeftToRight</enum>
                   </property>
                   <property name="styleSheet">
-                   <string notr="true">background-image: url(:/icons/images/icons/cil-save.png)</string>
+                   <string notr="true">background-image: url(:/icons/images/icons/cil-save.png);</string>
                   </property>
                   <property name="text">
                    <string>Save</string>
